<resources>
  <string name="app_name">Lite Download Manager</string>
  <string name="tap_to_begin_cloning">Tap to begin cloning</string>
  <string name="create_v1_db">Create V1 DB</string>
  <string name="tap_to_begin_migration">Tap to begin migration</string>
  <string name="migrate">Migrate</string>
  <string name="pause">Pause</string>
  <string name="resume">Resume</string>
  <string name="download_only_over_wifi">Download only over WiFi</string>
  <string name="start_downloading">Start downloading</string>
  <string name="delete_all">Delete all</string>
  <string name="log_file_directory">Log File Directory</string>
  <string name="log_download_file_status">Log Download File Status</string>
  <string name="example_batch_status">Batch {DownloadBatchTitle} downloaded: 98% bytes: 1024 total: 2048 status: DOWNLOADING</string>
  <string name="batch_status_one">Batch Status One</string>
  <string name="batch_status_two">Batch Status Two</string>
  <string name="migration">Migration</string>
  <string name="downloads">Downloads</string>

  <string-array name="file_sizes">
    <item>10MB</item>
    <item>20MB</item>
    <item>50MB</item>
    <item>100MB</item>
  </string-array>
</resources>
