<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
    android:id="@+id/database_cloning_updates"
    android:layout_width="0dp"
    android:layout_height="18dp"
    android:layout_marginLeft="8dp"
    android:layout_marginStart="8dp"
    android:layout_weight="1"
    android:text="@string/tap_to_begin_cloning"
    app:layout_constraintBaseline_toBaselineOf="@+id/button_create_v1_db"
    app:layout_constraintStart_toStartOf="parent" />

  <Spinner
    android:id="@+id/database_download_file_size"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="16dp"
    app:layout_constraintEnd_toStartOf="@+id/button_create_v1_db"
    app:layout_constraintStart_toEndOf="@+id/database_cloning_updates"
    app:layout_constraintTop_toTopOf="parent" />

  <Button
    android:id="@+id/button_create_v1_db"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:text="@string/create_v1_db"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/database_migration_updates"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginStart="8dp"
    android:layout_weight="1"
    android:text="@string/tap_to_begin_migration"
    app:layout_constraintBaseline_toBaselineOf="@+id/button_migrate"
    app:layout_constraintEnd_toStartOf="@+id/button_migrate"
    app:layout_constraintStart_toStartOf="parent" />

  <Button
    android:id="@+id/button_migrate"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:text="@string/migrate"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/button_create_v1_db" />

</android.support.constraint.ConstraintLayout>
